closing feature #311. Adding parameters "width" and "height" to image displayer screen in templateDesigner.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1413 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -86,6 +86,8 @@ templateDesigner.operations = Operationen
 templateDesigner.up = 	Nach oben
 templateDesigner.down = Nach unten
 
-
 templateDesigner.operations = Operationen
 templateDesigner.available = Verf\u00FCgbar
+
+templateDesigner.displayer.image.maxWidth = Max width
+templateDesigner.displayer.image.maxHeight = Max height
