--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -87,3 +87,6 @@ templateDesigner.displayer = Displayer
 templateDesigner.operations = Operations
 templateDesigner.up = Up
 templateDesigner.down = Down
+
+templateDesigner.displayer.image.maxWidth = Max width
+templateDesigner.displayer.image.maxHeight = Max height
