--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
@@ -86,3 +86,6 @@ templateDesigner.displayer = Afficheur
 templateDesigner.operations = Opérations
 templateDesigner.up = Monter
 templateDesigner.down = Descendre
+
+templateDesigner.displayer.image.maxWidth = Largeur max
+templateDesigner.displayer.image.maxHeight = Hauteur max
