closing feature #387. Adding new sort criteria on search engine : Popularity.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1418 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
@@ -127,6 +127,7 @@ pdcPeas.SortValueSearch.3 = Autor
 pdcPeas.SortValueSearch.4 = Datum
 pdcPeas.SortValueSearch.5 = Last update date
 pdcPeas.SortValueSearch.6 = Standort
+pdcPeas.SortValueSearch.7 = Popularität
 pdcPeas.DomainSelect = Bereich:
 pdcPeas.ComponentSelect = Dienst:
 pdcPeas.AuthorSelect = Herausgeber:
@@ -259,5 +260,7 @@ pdcPeas.Axe = Achse
 pdcPeas.selectAll=Alles ausw\u00E4hlen
 
 # Facet group search message
-pdcPeas.group.tooltip.enable= Click to show only '{0}' results.
-pdcPeas.group.tooltip.disable= Click to cancel '{0}' filter results.
+pdcPeas.group.tooltip.enable= Click to show only '{0}' results
+pdcPeas.group.tooltip.disable= Click to cancel '{0}' filter results
+
+pdcPeas.popularity = * views
