--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -132,6 +132,7 @@ pdcPeas.SortValueSearch.3 = Author
 pdcPeas.SortValueSearch.4 = Creation date
 pdcPeas.SortValueSearch.5 = Last update date
 pdcPeas.SortValueSearch.6 = Location
+pdcPeas.SortValueSearch.7 = Popularity
 pdcPeas.DomainSelect = Workspace:
 pdcPeas.ComponentSelect = Service:
 pdcPeas.AuthorSelect = Publisher:
@@ -275,5 +276,7 @@ pdcPeas.selectAll=Select all
 pdcpeas.didYouMean= Did You mean  :
 
 # Facet group search message
-pdcPeas.group.tooltip.enable= Click to show only '{0}' results.
-pdcPeas.group.tooltip.disable= Click to cancel '{0}' filter results.
+pdcPeas.group.tooltip.enable= Click to show only '{0}' results
+pdcPeas.group.tooltip.disable= Click to cancel '{0}' filter results
+
+pdcPeas.popularity = * views
