--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
@@ -132,6 +132,7 @@ pdcPeas.SortValueSearch.3 = Auteur
 pdcPeas.SortValueSearch.4 = Date de création
 pdcPeas.SortValueSearch.5 = Date de modification
 pdcPeas.SortValueSearch.6 = Emplacement
+pdcPeas.SortValueSearch.7 = Popularité
 pdcPeas.DomainSelect = Espace :
 pdcPeas.ComponentSelect = Service :
 pdcPeas.AuthorSelect = Publieur :
@@ -269,5 +270,7 @@ pdcPeas.selectAll=Tout sélectionner
 pdcpeas.didYouMean= Essayez avec cette orthographe :
 
 # Facet group search message
-pdcPeas.group.tooltip.enable= Cliquer pour affiner la recherche sur {0}.
-pdcPeas.group.tooltip.disable= Cliquer pour supprimer le filtre sur {0}.
+pdcPeas.group.tooltip.enable= Cliquer pour affiner la recherche sur {0}
+pdcPeas.group.tooltip.disable= Cliquer pour supprimer le filtre sur {0}
+
+pdcPeas.popularity = Consulté * fois
