--- a/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_fr.properties
@@ -22,8 +22,8 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 adminConsol = Administration
-MyPDCSubscriptions = Mes requêtes favorites
-NoPDCSubscriptions = Aucune requête favorite !
+MyPDCSubscriptions = Mes requ\u00EAtes favorites
+NoPDCSubscriptions = Aucune requ\u00EAte favorite !
 Administration = Administration
 AdministrationPortlet = Administration des portlets
 AdministrationPdc = Plan de classement
@@ -36,18 +36,18 @@ Component = Service
 AxisCollaboration = Documents dans 
 AxisEmpty = no PDC
 
-Choose = Sélectionnez...
-FavRequests = Mes requêtes favorites
+Choose = S\u00E9lectionnez...
+FavRequests = Mes requ\u00EAtes favorites
 FavLinks = Mes liens favoris
 Directory = Annuaire
 Mail = Mes notifications
-ToDo = Mes tâches
+ToDo = Mes t\u00E2ches
 Diary = Mon agenda
 Workflow = Workflow
 NotifyUser = Notifier
 NotificationBox = Lire mes notifications
 MyInterestCenters = Mes abonnements
-LatestPublications = Les * dernières publications
+LatestPublications = Les * derni\u00E8res publications
 QuickInfos = Quick infos
 FileSharing = Mes tickets
 WebConnections = Mes connexions
@@ -57,17 +57,17 @@ HelpLaunchIEPage = HelpLaunchIE_fr.jsp
 
 Informations = Informations
 Search = Rechercher
-SearchAdvanced = Recherche avancée
-SearchLastResults = Derniers résultats
-SearchHelp = Aide à la recherche
+SearchAdvanced = Recherche avanc\u00E9e
+SearchLastResults = Derniers r\u00E9sultats
+SearchHelp = Aide \u00E0 la recherche
 Welcome = Bienvenue
 Tools = Outils
 Date = Date
 InfosOn = Afficher les informations
 InfosOff = Ne pas afficher les informations
-Feedback = Ecrire à l'administrateur
+Feedback = Ecrire \u00E0 l'administrateur
 MyMap = Visualiser le plan du site
-Exit = Se déconnecter
+Exit = Se d\u00E9connecter
 Help = Aide
 Personalization = Personnaliser
 Clipboard = Presse-papier
@@ -76,29 +76,29 @@ NewMessages = nouveaux messages
 NewMessage = nouveau message
 NoNewMessage = Pas de nouveaux messages !
 Today = Aujourd'hui
-NoEvents = Aucun événement programmé !
-ThinkTo = Penser à
-NoTodos = Aucune tâche programmée !
+NoEvents = Aucun \u00E9v\u00E9nement programm\u00E9 !
+ThinkTo = Penser \u00E0
+NoTodos = Aucune t\u00E2che programm\u00E9e !
 MyFavorites = Mes Favoris
-NoFavorites = Aucun favori défini !
+NoFavorites = Aucun favori d\u00E9fini !
 MyNextEvent = Mes prochains rendez-vous
 today = Aujourd'hui
 tomorrow = Demain
-MyAttachment = Mes fichiers réservés
-until = Jusqu'à
+MyAttachment = Mes fichiers r\u00E9serv\u00E9s
+until = Jusqu'\u00E0
 
 selectSpace= Choix d'un espace
 
-ErrorNetwork = Problème de communication avec le serveur !
-ErrorDB = Erreur avec la base de données !
-ErrorEJBFinder = Objet spécifié introuvable !
-ErrorEJBCreation = Problème de création d'EJB !
-ErrorObjectNotFound = L'élément que vous voulez atteindre n'existe plus !
-ErrorObjectManipulation = L'élément que vous voulez manipuler a été modifié de manière concurrente, les éventuelles modifications que vous avez apporté n'ont pas été enregistrées !
-ErrorUnknown = Problème inattendu rencontré !
+ErrorNetwork = Probl\u00E8me de communication avec le serveur !
+ErrorDB = Erreur avec la base de donn\u00E9es !
+ErrorEJBFinder = Objet sp\u00E9cifi\u00E9 introuvable !
+ErrorEJBCreation = Probl\u00E8me de cr\u00E9ation d'EJB !
+ErrorObjectNotFound = L'\u00E9l\u00E9ment que vous voulez atteindre n'existe plus !
+ErrorObjectManipulation = L'\u00E9l\u00E9ment que vous voulez manipuler a \u00E9t\u00E9 modifi\u00E9 de mani\u00E8re concurrente, les \u00E9ventuelles modifications que vous avez apport\u00E9 n'ont pas \u00E9t\u00E9 enregistr\u00E9es !
+ErrorUnknown = Probl\u00E8me inattendu rencontr\u00E9 !
 Error = Une erreur s'est produite
-RequestUncomplete = Votre demande ne peut être satisfaite.
-ErrorTransmitAdmin = Transmettez ce message d'erreur à l'administrateur.
+RequestUncomplete = Votre demande ne peut \u00EAtre satisfaite.
+ErrorTransmitAdmin = Transmettez ce message d'erreur \u00E0 l'administrateur.
 Thanks = Merci.
 BackToMainPage = Retour sur la page principale
 BackToMainPageSpace = Retour sur la page principale de l'espace
@@ -108,10 +108,10 @@ navigationView = Navigation
 byComponent = Par Service
 bySpace = Par Espace
 
-reductExtend = Réduire / Etirer
+reductExtend = R\u00E9duire / Etirer
 
-homePage.feedback = Ecrire à l'administrateur
-homePage.loginBack = Retour à la page d'identification
+homePage.feedback = Ecrire \u00E0 l'administrateur
+homePage.loginBack = Retour \u00E0 la page d'identification
 homePage.maintenanceOn = Votre application est en cours de maintenance.
 homePage.spaceMaintenanceOn = L'espace est en cours de maintenance.
 
@@ -125,14 +125,14 @@ notification.subject = Sujet
 BackToPersonalMainPage = Accueil de l'espace personnel
 
 # Login Page
-storePassword = Mémoriser le mot de passe ?
+storePassword = M\u00E9moriser le mot de passe ?
 
 # Connected Users
-connectedUser = autre utilisateur connecté
-connectedUsers = autres utilisateurs connectés
+connectedUser = autre utilisateur connect\u00E9
+connectedUsers = autres utilisateurs connect\u00E9s
 
 # traitement des erreurs de login
 1 = Login ou mot de passe incorrect
-2 = Problème technique
-3 = Votre session a expiré
-4 = Déconnexion utilisateur
+2 = Probl\u00E8me technique
+3 = Votre session a expir\u00E9
+4 = D\u00E9connexion utilisateur
