--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -144,6 +144,7 @@ GML.publish						= Ver&ouml;ffentlichen
 
 GML.restore						= Wiederherstellen
 
+GML.saveDraft					= Abspeichern
 GML.search						= Suchen
 GML.size						= Gr&ouml;sse
 GML.space						= Bereich
