--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -142,6 +142,7 @@ GML.publish						= Publish
 
 GML.restore						= Restore
 
+GML.saveDraft					= Save
 GML.search						= Search
 GML.size						= Size
 GML.space						= Workspace
