--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -146,6 +146,7 @@ GML.publish						= Publier
 
 GML.restore						= Restaurer
 
+GML.saveDraft					= Sauvegarder
 GML.search						= Rechercher
 GML.size						= Taille
 GML.space						= Espace
