--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -91,3 +91,6 @@ templateDesigner.available = Verf\u00FCgbar
 
 templateDesigner.displayer.image.maxWidth = Max width
 templateDesigner.displayer.image.maxHeight = Max height
+
+templateDesigner.displayer.wysiwyg.width = Weite
+templateDesigner.displayer.wysiwyg.height = Hohe
