--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -90,3 +90,7 @@ templateDesigner.down = Down
 
 templateDesigner.displayer.image.maxWidth = Max width
 templateDesigner.displayer.image.maxHeight = Max height
+
+
+templateDesigner.displayer.wysiwyg.width = Width
+templateDesigner.displayer.wysiwyg.height = Height
