--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
@@ -89,3 +89,6 @@ templateDesigner.down = Descendre
 
 templateDesigner.displayer.image.maxWidth = Largeur max
 templateDesigner.displayer.image.maxHeight = Hauteur max
+
+templateDesigner.displayer.wysiwyg.width = Largeur
+templateDesigner.displayer.wysiwyg.height = Hauteur
