libellé saveAsDraft passé de Sauvegarder à Brouillon
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1644 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -146,7 +146,7 @@ GML.publish						= Publier
 
 GML.restore						= Restaurer
 
-GML.saveDraft					= Sauvegarder
+GML.saveDraft					= Brouillon
 GML.search						= Rechercher
 GML.size						= Taille
 GML.space						= Espace
