closing feature #329. Creating new XML field : group.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1647 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_de.properties
@@ -29,6 +29,9 @@ Characters = Zeichen
 userPanel = Einen Benutzer w\u00E4hlen
 clearUser = Feld reinitialisieren
 
+groupPanel = Select a group
+clearGroup = Feld reinitialisieren
+
 removeFile = Datei l\u00F6schen
 removeImage = Bild l\u00F6schen
 
