--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_en.properties
@@ -28,6 +28,9 @@ Characters = characters
 userPanel = Select a user
 clearUser = Initialize field
 
+groupPanel = Select a group
+clearGroup = Initialize field
+
 removeFile = Remove this file
 removeImage = Remove this image
 
