--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -77,6 +77,7 @@ templateDesigner.newFieldDate = Ein 'Datum'-Feld hinzuf\u00FCgen
 templateDesigner.newFieldFile = Ein 'Datei'-Feld hinzuf\u00FCgen
 templateDesigner.newFieldImage = Ein 'Bild'-Feld hinzuf\u00FCgen
 templateDesigner.newFieldUser = Ein 'Benutzer'-Feld hinzuf\u00FCgen
+templateDesigner.newFieldUser = Ein 'Group'-Feld hinzuf\u00FCgen
 templateDesigner.newFieldLdap = Ein Feld 'LDAP-Connector' hinzuf\u00FCgen
 templateDesigner.newFieldAccessPath = Ein Feld 'Standort' hinzuf\u00FCgen
 templateDesigner.newFieldJdbc = Ein Feld 'JDBC Connector' hinzuf\u00FCgen
