--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -78,6 +78,7 @@ templateDesigner.newFieldDate = Add a 'Date' field
 templateDesigner.newFieldFile = Add a 'File' field
 templateDesigner.newFieldImage = Add an 'Image' field
 templateDesigner.newFieldUser = Add a 'User' field
+templateDesigner.newFieldGroup = Add a 'Group' field
 templateDesigner.newFieldLdap = Add a 'LDAP connector' field
 templateDesigner.newFieldAccessPath = Add an 'Access path' field
 templateDesigner.newFieldJdbc = Add a 'JDBC connector' field
