--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
@@ -77,6 +77,7 @@ templateDesigner.newFieldDate = Ajouter un champ 'Date'
 templateDesigner.newFieldFile = Ajouter un champ 'Fichier'
 templateDesigner.newFieldImage = Ajouter un champ 'Image'
 templateDesigner.newFieldUser = Ajouter un champ 'Utilisateur'
+templateDesigner.newFieldGroup = Ajouter un champ 'Groupe'
 templateDesigner.newFieldLdap = Ajouter un champ 'Connecteur LDAP'
 templateDesigner.newFieldAccessPath = Ajouter un champ 'Emplacement'
 templateDesigner.newFieldJdbc = Ajouter un champ 'Connecteur JDBC'
