--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_de.properties
@@ -35,6 +35,10 @@ clearGroup = Feld reinitialisieren
 removeFile = Datei l\u00F6schen
 removeImage = Bild l\u00F6schen
 
+SelectValue = Einen bedeutung ausw\u00E4hlen
+
+SelectPicture = Ein bild ausw\u00E4hlen
+
 // filtres
 eq =
 le = (vor dem)
