--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_en.properties
@@ -36,6 +36,8 @@ removeImage = Remove this image
 
 SelectValue = Select a value
 
+SelectPicture = Select a picture
+
 // filtres
 eq =
 le = (before)
