adding key : GML.ExportCSV
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1733 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -264,6 +264,7 @@ GML.errorCsvFile = Fehler! Mann kann nur Dateien hochladen, die die der Erweiter
 GML.ExportSucceeded = Export erfolgreich.
 GML.ExportFailed = Der Export ist fehlgeschlagen.
 GML.ExportInProgress = Export l\u00E4uft ...
+GML.ExportCSV = Export CSV
 
 GML.DragNDropExpand = Um eine Datei schnell abzulegen...
 GML.DragNDropCollapse = Schliessen
