--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -262,6 +262,7 @@ GML.errorCsvFile = Error! Only .csv files are allowed
 GML.ExportSucceeded = Export has finished.
 GML.ExportFailed = Export has failed.
 GML.ExportInProgress = Export in progress...
+GML.ExportCSV = Export CSV
 
 GML.DragNDropExpand = Quick upload...
 GML.DragNDropCollapse = Close
