--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -267,6 +267,7 @@ GML.errorCsvFile = Erreur, on ne peut uploader que des fichiers d'extension .csv
 GML.ExportSucceeded = Export r\u00E9ussi.
 GML.ExportFailed = L'export a \u00E9chou\u00E9.
 GML.ExportInProgress = Export en cours...
+GML.ExportCSV = Exporter en CSV
 
 GML.DragNDropExpand = Pour d\u00E9poser rapidement un fichier...
 GML.DragNDropCollapse = Fermer
