closes feature #542 - mon compte // mes notif : ERREUR 500
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1739 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_en.properties
@@ -52,3 +52,4 @@ DeleteAllSendedNotif = Remove all messages
 ConfirmDeleteAllSendedNotif =  Do you really want to delete all messages ?
 NameOfReceivers = This message has been sent to : 
 UserNotification = User Notification
+UnknownSource = Unknown source
