--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_fr.properties
@@ -52,3 +52,4 @@ DeleteAllSendedNotif = Supprimer toutes mes notifications envoy\u00E9es
 ConfirmDeleteAllSendedNotiff = Etes-vous sur de vouloir supprimer toutes les notifications envoy\u00E9es ?
 NameOfReceivers = Ce message a \u00E9t\u00E9 adress\u00E9 \u00E0 : 
 UserNotification = Notification manuelle
+UnknownSource = Source inconnue
