update feature #562 Merge of specific branche into silverpeas trunk
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1943 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
@@ -260,6 +260,9 @@ pdcPeas.Axe = Achse
 pdcPeas.selectAll=Alles ausw\u00E4hlen
 
 # Facet group search message
+pdcPeas.group.author= Auteur
+pdcPeas.group.service= Service
+
 pdcPeas.group.tooltip.enable= Click to show only '{0}' results
 pdcPeas.group.tooltip.disable= Click to cancel '{0}' filter results
 
