--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -276,6 +276,8 @@ pdcPeas.selectAll=Select all
 pdcpeas.didYouMean= Did You mean  :
 
 # Facet group search message
+pdcPeas.group.author= Author
+pdcPeas.group.service= Service
 pdcPeas.group.tooltip.enable= Click to show only '{0}' results
 pdcPeas.group.tooltip.disable= Click to cancel '{0}' filter results
 
