--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
@@ -270,6 +270,8 @@ pdcPeas.selectAll=Tout sélectionner
 pdcpeas.didYouMean= Essayez avec cette orthographe :
 
 # Facet group search message
+pdcPeas.group.author= Auteur
+pdcPeas.group.service= Service
 pdcPeas.group.tooltip.enable= Cliquer pour affiner la recherche sur {0}
 pdcPeas.group.tooltip.disable= Cliquer pour supprimer le filtre sur {0}
 
