Fixing bug #778 and Support #418 : the applet has now an ATL attribute and the max file size is in byte
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2028 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/util/multilang/util_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/util/multilang/util_de.properties
@@ -33,5 +33,4 @@ util.type = Erwarteter Typ
 util.colonnesAttendues = Spalten auf
 util.attendues = Erwartete
 
-
-
+applet.dnd.alt=Applet for files drag and drop.
