--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -222,7 +222,7 @@ GML.mois10 = November
 GML.mois11 = Dezember
 
 //Contr\u00F4le JavaScript
-GML.ThisFormContains = Dieses Fomular enth&auml;lt 
+GML.ThisFormContains = Dieses Fomular enth&auml;lt
 GML.MustBeFilled = muss ausgef&uuml;llt werden
 GML.MustContainsNumber = muss eine Ganzzahl enthalten
 GML.MustContainsFloat = muss eine Zahl enthalten
@@ -231,7 +231,7 @@ GML.MustContainsPostDateTo = muss ein Datum enthalten, das sp&auml;ter ist als
 GML.MustContainsPostOrEqualDateTo = muss ein datum enthalten, das sp&auml;ter ist als oder gleich ist wie
 GML.MustContainsPostDate = muss ein Datum enthalten, das nach dem heutigen Datum liegt
 GML.MustContainsDateBetween1 = muss ein Datum enthalten zwischen dem
-GML.MustContainsDateBetween2 = und dem 
+GML.MustContainsDateBetween2 = und dem
 GML.MustContainsCorrectHour = muss eine korrekte Uhrzeit enthalten
 
 //Plan de classement
@@ -253,11 +253,11 @@ GML.translationRemove = Diese &Uuml;bersetzung l&ouml;schen
 //Import CSV
 GML.csvFile = CSV Datei
 GML.ligne = - Reihe
-GML.colonne = Spalte 
+GML.colonne = Spalte
 GML.valeur = Wert
 GML.obligatoire = Dieses Feld ist obligatorisch
 GML.nbCarMax = Der Wert darf nicht &Uuml;berschritten werden
-GML.nbCarMin = Der Wert muss mindestens 
+GML.nbCarMin = Der Wert muss mindestens
 GML.caracteres = Zeichen enthalten
 GML.errorCsvFile = Fehler! Mann kann nur Dateien hochladen, die die der Erweiterung .Csv haben
 //Export CSV
@@ -268,3 +268,5 @@ GML.ExportCSV = Export CSV
 
 GML.DragNDropExpand = Um eine Datei schnell abzulegen...
 GML.DragNDropCollapse = Schliessen
+
+GML.applet.dnd.alt=Applet for files drag and drop.
