--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -225,7 +225,7 @@ GML.mois10 = Novembre
 GML.mois11 = D\u00E9cembre
 
 //Contr\u00F4le JavaScript
-GML.ThisFormContains = Ce formulaire contient 
+GML.ThisFormContains = Ce formulaire contient
 GML.MustBeFilled = doit \u00EAtre renseign\u00E9
 GML.MustContainsNumber = doit contenir un entier
 GML.MustContainsFloat = doit contenir un nombre
@@ -274,3 +274,4 @@ GML.DragNDropCollapse = Fermer
 
 GML.personalSpace = Espace personnel
 GML.linkTo = R\u00E9f\u00E9rencer
+GML.applet.dnd.alt=Applet pour le glisser/d\u00E9poser de fichiers.
