--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -56,7 +56,7 @@ GML.cut							= Cut
 GML.generatePDF						= Generate PDF
 
 GML.date						= Date
-GML.dateBegin 						= Start Date 
+GML.dateBegin 						= Start Date
 GML.dateEnd 						= End Date
 GML.day							= Day
 GML.delete						= Delete
@@ -219,8 +219,8 @@ GML.mois9 = October
 GML.mois10 = November
 GML.mois11 = December
 
-//Contrôle JavaScript
-GML.ThisFormContains = This forms contains 
+#Controle JavaScript
+GML.ThisFormContains = This forms contains
 GML.MustBeFilled = must be filled
 GML.MustContainsNumber = must contain a number
 GML.MustContainsFloat = must contain a float
@@ -232,13 +232,13 @@ GML.MustContainsDateBetween1 = must contain a between
 GML.MustContainsDateBetween2 = and
 GML.MustContainsCorrectHour = must contain a correct hour
 
-//Plan de classement
+#Plan de classement
 GML.PDC = Categorization
 GML.PDCParam = Set up the categorization scheme
 GML.PDCNewPosition = Create a new position
 GML.PDCDeletePosition = Delete selected position(s)
 
-//Contrôles d'accès
+#Access Control
 GML.ForbiddenAccessContent = You are not allowed to access this information!
 GML.DocumentNotFound = The information you are trying to reach has been deleted!
 
@@ -269,3 +269,5 @@ GML.DragNDropCollapse = Close
 
 GML.personalSpace = Personal space
 GML.linkTo = Link to
+
+GML.applet.dnd.alt=Applet for files drag and drop.
