closing feature #846. On XML field "image", adding capabilities to select an image from galleries. Updating template designer to manage new parameter on "image" field...
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2052 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -92,6 +92,7 @@ templateDesigner.available = Verf\u00FCgbar
 
 templateDesigner.displayer.image.maxWidth = Max width
 templateDesigner.displayer.image.maxHeight = Max height
+templateDesigner.displayer.image.galleries = Galleries
 
 templateDesigner.displayer.wysiwyg.width = Weite
 templateDesigner.displayer.wysiwyg.height = Hohe
