--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
@@ -90,6 +90,7 @@ templateDesigner.down = Descendre
 
 templateDesigner.displayer.image.maxWidth = Largeur max
 templateDesigner.displayer.image.maxHeight = Hauteur max
+templateDesigner.displayer.image.galleries = Phototh\u00E8ques
 
 templateDesigner.displayer.wysiwyg.width = Largeur
 templateDesigner.displayer.wysiwyg.height = Hauteur
