--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -269,4 +269,7 @@ GML.ExportCSV = Export CSV
 GML.DragNDropExpand = Um eine Datei schnell abzulegen...
 GML.DragNDropCollapse = Schliessen
 
-GML.applet.dnd.alt=Applet for files drag and drop.
+GML.or = oder
+GML.galleries = Galleries
+
+GML.applet.dnd.alt=Applet for files drag and drop
