--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -270,4 +270,6 @@ GML.DragNDropCollapse = Close
 GML.personalSpace = Personal space
 GML.linkTo = Link to
 
-GML.applet.dnd.alt=Applet for files drag and drop.
+GML.or = or
+GML.galleries = Galleries
+GML.applet.dnd.alt=Applet for files drag and drop
