closing feature #895. Replacing modal-message by Jquery widget "Dialog".
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2077 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_de.properties
@@ -81,3 +81,5 @@ attachment.suppressionConfirmation = Sind Sie sicher die Datei "*" l\u00F6schen 
 attachment.allTranslations = Alle \u00DCbersetzungen
 
 attachment.warning.checkin.locked=Die Datei ist noch im on-line Bearbeitungsmodus. <br/>Bitte schlie\u00DFen Sie sie bevor Sie diese freigeben k\u00F6nnen.
+
+attachment.dialog.delete = Delete this file ?
