--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_en.properties
@@ -70,3 +70,5 @@ attachment.xmlForm.ToolTip = Additional informations about
 attachment.share = Share this file
 attachment.checkOutAndDownload = Lock and download
 attachment.checkOutAndEditOnline = Edit online
+
+attachment.dialog.delete = Delete this file ?
