--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_fr.properties
@@ -74,3 +74,5 @@ attachment.share = Partager ce fichier
 
 attachment.checkOutAndDownload = R\u00E9server et t\u00E9l\u00E9charger
 attachment.checkOutAndEditOnline = Editer en ligne
+
+attachment.dialog.delete = Supprimer le fichier ?
