--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle_en.properties
@@ -30,3 +30,6 @@ GEF.pagination.lastPage = Last page
 GEF.pagination.gotoPage = Go to page 
 GEF.pagination.jumptoPage = Jump to page...
 GEF.pagination.jumper = Page...
+
+GEF.progressMessage.message1 = Application being processed
+GEF.progressMessage.message2 = Please wait...
