--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_en.properties
@@ -53,3 +53,4 @@ ConfirmDeleteAllSendedNotif =  Do you really want to delete all messages ?
 NameOfReceivers = This message has been sent to : 
 UserNotification = User Notification
 UnknownSource = Unknown source
+NameOfGroupReceivers = And groups : 
