--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_fr.properties
@@ -53,3 +53,4 @@ ConfirmDeleteAllSendedNotiff = Etes-vous sur de vouloir supprimer toutes les not
 NameOfReceivers = Ce message a \u00E9t\u00E9 adress\u00E9 \u00E0 : 
 UserNotification = Notification manuelle
 UnknownSource = Source inconnue
+NameOfGroupReceivers = Et aux groupes : 
