closing feature #411 - import de contacts par fichier CSV (champs entete + champs de formulaire xml de type texte) - Ajout attribut mandatory sur l'import CSV voir yellowpagesSettings.properties) - Ajout script infoHighlight.js pour infobulle géré par qTip
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2191 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/util/multilang/util_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/util/multilang/util_fr.properties
@@ -27,6 +27,7 @@ mo = Mo
 util.ligne = - Ligne
 util.colonne = Colonne
 util.errorType = Type erron\u00E9 : 
+util.errorMandatory = Valeur obligatoire : 
 util.valeur = Valeur
 util.type = Type attendu
 util.colonnesAttendues = colonnes sur
