fixing bug #431. Adding explicit message in case of concurrent check-in...
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2213 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_en.properties
@@ -98,3 +98,5 @@ versioning.checkOutAndEditOnline = Edit online
 
 confirm.checkin.message=Do you want to save your changes ?
 versioning.checkin.abort=Abort my changes
+
+versioning.dialog.checkout.nok = File already reserved by another user
