--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_fr.properties
@@ -99,3 +99,5 @@ versioning.checkOutAndEditOnline = Editer en ligne
 
 confirm.checkin.message=Voulez-vous enregistrer vos modifications ?
 versioning.checkin.abort=Abandonner mes modifications
+
+versioning.dialog.checkout.nok = Fichier d\u00E9j\u00E0 r\u00E9serv\u00E9 par un autre utilisateur
