--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_de.properties
@@ -83,3 +83,4 @@ attachment.allTranslations = Alle \u00DCbersetzungen
 attachment.warning.checkin.locked=Die Datei ist noch im on-line Bearbeitungsmodus. <br/>Bitte schlie\u00DFen Sie sie bevor Sie diese freigeben k\u00F6nnen.
 
 attachment.dialog.delete = Delete this file ?
+attachment.dialog.checkout.nok = File already reserved or error during reservation
