--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_en.properties
@@ -72,3 +72,4 @@ attachment.checkOutAndDownload = Lock and download
 attachment.checkOutAndEditOnline = Edit online
 
 attachment.dialog.delete = Delete this file ?
+attachment.dialog.checkout.nok = File already reserved or error during reservation
