--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_fr.properties
@@ -76,3 +76,5 @@ attachment.checkOutAndDownload = R\u00E9server et t\u00E9l\u00E9charger
 attachment.checkOutAndEditOnline = Editer en ligne
 
 attachment.dialog.delete = Supprimer le fichier ?
+
+attachment.dialog.checkout.nok = Fichier d\u00E9j\u00E0 r\u00E9serv\u00E9 ou erreur lors de la r\u00E9servation
