--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_de.properties
@@ -85,3 +85,19 @@ versioning.SaveListWriters = Speichern Sie die Liste der Benutzer als Modell
 versioning.ListSaved = Modell der Liste gespeichert... 
 versioning.warning.checkin.locked=Die Datei ist noch im on-line Bearbeitungsmodus.<br/>Bitte schlie\u00DFen Sie diese Datein bevor Sie Sie freigeben.
 versioning.warning.checkin.locked.title=Datei gesperrt
+versioning.warning.checkin.locked.force=Force release
+
+versioning.xmlForm.View = More...
+versioning.xmlForm.XtraData = Additional informations
+versioning.xmlForm.ToolTip = Additional informations about
+versioning.CopyLink = To copy the link to this file : Right click then 'Copy shortcut'
+
+versioning.share = Share this file
+
+versioning.checkOutAndDownload = Lock and download
+versioning.checkOutAndEditOnline = Edit online
+
+confirm.checkin.message=Do you want to save your changes ?
+versioning.checkin.abort=Abort my changes
+
+versioning.dialog.checkout.nok = File already reserved by another user
