fixing misconfiguration on domainMSAD.properties
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2222 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/multilang/domainLDAPBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/multilang/domainLDAPBundle_fr.properties
@@ -31,7 +31,7 @@ email.description = Aide sur l'email
 
 title         = Titre
 title.description = Aide sur le champ Titre
-company       = DRD
+office        = Bureau
 position      = Département
 boss          = Responsable
 phone         = Téléphone
@@ -39,5 +39,3 @@ homePhone     = Téléphone personnel
 fax           = Fax
 cellularPhone = Téléphone portable
 address       = Adresse
-site	      = Site
-info	      = Commentaires
