--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/multilang/domainLDAPBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/multilang/domainLDAPBundle_en.properties
@@ -32,7 +32,7 @@ email.description = Help on the email field
 
 title         = Title
 title.description = Help on the title field
-company       = DRD
+office        = Desk
 position      = Department
 boss          = Manager
 phone         = Phone
@@ -40,5 +40,3 @@ homePhone     = Home phone
 fax           = Fax
 cellularPhone = Cellular phone
 address       = Address
-site	      = Site
-info	      = Comments
