--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
@@ -156,3 +156,4 @@ JSPP.inheritanceToUse = um die Rechte des Bereichs zu benutzen.
 JSPP.SpaceAppearance = Aussehen
 JSPP.SpaceLook = Thema
 JSPP.WallPaper = Bandbild
+JSPP.parameters = Parameter
