--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
@@ -168,3 +168,4 @@ JSPP.SpaceLook = Theme
 JSPP.WallPaper = Header
 
 JSPP.inProgress = Processing!<br/>Please wait...
+JSPP.parameters = Parameters
