--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_fr.properties
@@ -168,3 +168,4 @@ JSPP.SpaceLook = Thème
 JSPP.WallPaper = Bandeau
 
 JSPP.inProgress = Traitement en cours !<br/>Veuillez patienter...
+JSPP.parameters = Paramètres
