Displaying message from a resource bundle
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2235 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -33,6 +33,7 @@ GML.allMP						= Alle
 GML.allFP						= Alle
 GML.agenda 						= Agenda
 GML.attachments 					= Beigef&uuml;gte Dateien
+GML.noLockedFile           = Aucun fichier r\u00E9serv\u00E9 !
 GML.author						= Author
 GML.publisher						= Herausgeber
 GML.affichierCalendrier                                 = Kalender anzeigen
