--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -35,6 +35,7 @@ GML.allMP						= Tous
 GML.allFP						= Toutes
 GML.agenda 						= Agenda
 GML.attachments 					= Fichiers joints
+GML.noLockedFile           = Aucun fichier r\u00E9serv\u00E9 !
 GML.author						= Auteur
 GML.publisher						= Publieur
 GML.affichierCalendrie  = Afficher le calendrier
