--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -33,7 +33,7 @@ GML.allMP						= Alle
 GML.allFP						= Alle
 GML.agenda 						= Agenda
 GML.attachments 					= Beigef&uuml;gte Dateien
-GML.noLockedFile           = Aucun fichier r\u00E9serv\u00E9 !
+GML.noLockedFile           = No checked out file !
 GML.author						= Author
 GML.publisher						= Herausgeber
 GML.affichierCalendrier                                 = Kalender anzeigen
